# izhikevich_simulation

./: CMakeLists.txt  README.md  izhikevich.cu  izhikevich.ispc  izhikevich_main.cpp  plot_izhikevich.py
